--- a/detail.html
+++ b/detail.html
@@ -26,6 +26,7 @@
 <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -60,7 +61,7 @@
 </a>
   </li>
 </ul>
-      <a class="navbar-brand" href="#"><span>Ma</span>Fiésta</a>
+      <a class="navbar-brand" href="#"><span>Mon</span>Event</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="ournavbar">
@@ -86,7 +87,7 @@
         </li>
         <li><a href="#"><i class="fa fa-star-half-o" aria-hidden="true"></i> Nos Professionels</a></li>
         <li><a href="#"><i class="fa fa-users" aria-hidden="true"></i> Nos Partenaires</a></li>
-        <li><a href="#"><i class="fa fa-handshake-o" aria-hidden="true"></i> Devenire Partenaires</a></li>
+       <li><a href="contact.html"><i class="fa fa-pie-chart" aria-hidden="true"></i> Contacte</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-sign-in" aria-hidden="true"></i> <b>Login</b> <span class="caret"></span></a>
       <ul id="login-dp" class="dropdown-menu">
@@ -270,7 +271,7 @@
 
       <div class="footer-left">
 
-        <h3>Ma<span>Fiésta</span></h3>
+        <h3>Mon<span>Event</span></h3>
 
         <p class="footer-links">
           <a href="#">Home</a>
@@ -284,7 +285,7 @@
           <a href="#">Contact</a>
         </p>
 
-        <p class="footer-company-name">Mafiésta&copy; 2016</p>
+        <p class="footer-company-name">MonEvent&copy; 2016</p>
       </div>
 
       <div class="footer-center">
