--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,17 @@
 <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
-
 <link href="https://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style_premium.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/contact.css">
 
 </head>
 <body >
@@ -61,12 +62,12 @@
 </a>
   </li>
 </ul>
-      <a class="navbar-brand" href="#"><span>mon</span>event</a>
+      <a class="navbar-brand" href="#"><span>Mon</span>Event</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="ournavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#"><i class="fa fa-television" aria-hidden="true"></i> Présentation</a></li>
         <li><a href="#"><i class="fa fa-pie-chart" aria-hidden="true"></i> Nos Packes</a></li>
         <li class="dropdown">
@@ -137,99 +138,71 @@
 </nav>
 
 <!-- end navbar -------------------------- -->
-<!-- ------------------- begin table price ---------------- -->
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-offset-4 col-sm-8">
-            <div class="row">
-                <div class="col-xs-4 my_planHeader my_plan1">
-                    <div class="my_planTitle">compte1</div>
-                    <div class="my_planPrice">Gratuit</div>
-                    <div class="my_planDuration"> </div>
-                    <a href="#inscription" data-toggle="modal" type="button" class="btn btn-default">S'inscrire</a>
+
+
+  <section id="contact" style="">
+            <div class="container">
+                <div class="row">
+                    <div class="about_our_company" style="margin-bottom: 20px;">
+                        <h1 style="color:#fff;">écrire votre message</h1>
+                        <div class="titleline-icon"></div>
+                        <p style="color:#fff;">vous avez un message ou une demande d'information nous somme là .</p>
+                    </div>
                 </div>
-                <div class="col-xs-4 my_planHeader my_plan2">
-                    <div class="my_planTitle">compte 2</div>
-                    <div class="my_planPrice">2€</div>
-                    <div class="my_planDuration">Par Mois</div>
-                    <a href="paiment.html" type="button" class="btn btn-default">S'inscrire</a>
-                </div>
-                <div class="col-xs-4 my_planHeader my_plan3">
-                    <div class="my_planTitle">Compte 3</div>
-                    <div class="my_planPrice">3.75€</div>
-                    <div class="my_planDuration">Par mois</div>
-                    <a href="paiment.html" type="button" class="btn btn-default">S'inscrire</a>
+                <div class="row">
+                    <div class="col-md-8">
+                        <form name="sentMessage" id="contactForm" novalidate="">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <textarea class="form-control" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="col-lg-12 text-center">
+                                    <div id="success"></div>
+                                    <button type="submit" class="btn btn-xl get">Envoyer</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-4">
+                        <p style="color:#fff;">
+                            <strong><i class="fa fa-map-marker"></i> Address</strong><br>
+                            20280/Casablanca Californie, (Sidi maàrouf).
+                        </p>
+                        <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Numéro de téléphone</strong><br>
+                            (+212)6123456</p>
+                        <p style="color:#fff;">
+                            <strong><i class="fa fa-envelope"></i> Address Email </strong><br>
+                            Email@info.com</p>
+                        <p></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row my_featureRow">
-        <div class="col-xs-12 col-sm-4 my_feature">
-            Posté des offre
-        </div>
-        <div class="col-xs-12 col-sm-8">
-            <div class="row">
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan1">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan2">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan3">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row my_featureRow">
-        <div class="col-xs-12 col-sm-4 my_feature">
-            Vos Offres Parmis Les TOP 10
-        </div>
-        <div class="col-xs-12 col-sm-8">
-            <div class="row">
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan1">
-                    <i class="fa"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan2">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan3">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row my_featureRow">
-        <div class="col-xs-12 col-sm-4 my_feature">
-            Offres en premier dans les recherches
-        </div>
-        <div class="col-xs-12 col-sm-8">
-            <div class="row">
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan1">
-                    <i class="fa"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan2">
-                    <i class="fa"></i>
-                </div>
-                <div class="col-xs-4 col-sm-4 my_planFeature my_plan3">
-                    <i class="fa fa-check my_check"></i>
-                </div>
-            </div>
-        </div>
-    </div>     
-</div>
-
-
-
-
-
+        </section>
 
 
 <footer class="footer-distributed">
 
       <div class="footer-left">
 
-        <h3>Mon<span>event</span></h3>
+        <h3>Mon<span>Event</span></h3>
 
         <p class="footer-links">
           <a href="#">Home</a>
@@ -243,7 +216,7 @@
           <a href="#">Contact</a>
         </p>
 
-        <p class="footer-company-name">Monevent&copy; 2016</p>
+        <p class="footer-company-name">MonEvent&copy; 2016</p>
       </div>
 
       <div class="footer-center">
