--- a/dashbord.html
+++ b/dashbord.html
@@ -22,6 +22,8 @@
 <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
@@ -59,7 +61,7 @@
 </a>
   </li>
 </ul>
-      <a class="navbar-brand" href="#"><span>Ma</span>Fiésta</a>
+      <a class="navbar-brand" href="#"><span>Mon</span>Event</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="ournavbar">
@@ -165,7 +167,7 @@
 
       <div class="footer-left">
 
-        <h3>Ma<span>Fiésta</span></h3>
+        <h3>Mon<span>Event</span></h3>
 
         <p class="footer-links">
           <a href="#">Home</a>
@@ -179,7 +181,7 @@
           <a href="#">Contact</a>
         </p>
 
-        <p class="footer-company-name">Mafiésta&copy; 2016</p>
+        <p class="footer-company-name">MonEvent&copy; 2016</p>
       </div>
 
       <div class="footer-center">
